# machine_learning

./: README.md  pyproject.toml  test.ipynb
Free_code_camp/Tensor_Flow/: intro.ipynb
machine_alura/: in_mach_carros.ipynb  in_machine_lear2.ipynb  intro_classificação.ipynb  introdução_classificação.ipynb
machine_alura/classificacao/: in_mach_carros.ipynb  in_machine_lear2.ipynb  intro_test.ipynb
machine_alura/validação_de_modelo/: validacao.ipynb
test-output/: round-table.gv
