[tool.poetry]
name = "machine-learning"
version = "0.1.0"
description = ""
authors = ["victor <victorsoaresferreira09@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
jupyter = "^1.0.0"
scikit-learn = "^1.5.1"
ipykernel = "^6.29.5"
pandas = "^2.2.2"
seaborn = "^0.13.2"
matplotlib = "^3.9.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
